[package]
name = "regskin"
version = "0.2.2"
authors = ["rabadin <rvbadin@gmail.com>"]
edition = "2018"

[dependencies]

actix = "0.10"
actix-web = "3.3"
actix-files = "0.4"
actix-http = "2.2"
actix-web-prom = { git = "https://github.com/nlopes/actix-web-prom", rev = "8e0eb777" }
regex = "1.3.1"
tokio = {version="0.3", features=["full"]}
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4"
url = "2.1"
quote = "1.0"

validator = "0.9"
validator_derive = "0.9"
log = "0.4"
env_logger = "0.6"
rand = "0.7.0"
reqwest = { version = "0.10", features = ["json", "blocking", "gzip"] }
askama = "0.8"
bytes = "0.4"
