[package]
name = "regskin"
version = "1.1.0"
authors = ["rabadin <rvbadin@gmail.com>"]
edition = "2018"

[dependencies]

actix = "0.10"
actix-web = "3.3"
actix-files = "0.4"
actix-http = "2.2"
actix-web-prom = "0.5"
regex = "1.3"
tokio = {version="1.18", features=["full"]}
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4"
url = "2.3"
quote = "1.0"

validator = "0.9"
validator_derive = "0.9"
log = "0.4"
env_logger = "0.6"
rand = "0.7"
reqwest = { version = "0.10", features = ["json", "blocking", "gzip"] }
askama = "0.8"
bytes = "0.4"
