[package]
name = "regskin"
version = "1.2.1"
authors = ["rabadin <rvbadin@gmail.com>"]
edition = "2021"

[dependencies]

actix-web = "4.3"
actix-files = "0.6"
actix-web-prom = "0.6"
regex = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
url = "2.3"
quote = "1.0"

validator = "0.9"
validator_derive = "0.9"
log = "0.4"
env_logger = "0.6"
rand = "0.7"
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
askama = "0.12"
bytes = "0.4"
